NetS13nSW: check the strorage when imported scripts after installation

Scripts for service workers are loaded by using ServiceWorkerScriptLoaderFactory
when it's launched for installation. However, even after installation is
completed, SWScriptLoaderFactory can be used for importScripts() since
ServiceWorkerInstalledScriptsManager isn't created for installation.
This CL is to serve scripts imported after the install event from storage when
they are installed during installation state.

The WPT test is import-scripts-updated-flag.https.html. To make it pass, we need
to fix how to check the storage (this CL) and also need to use right URLLoader
for network (crrev.com/c/1075926).

Bug: 846237
Change-Id: Ic85ed99f9126e96e6a71eeca14a6cff10c1ceca4
Reviewed-on: https://chromium-review.googlesource.com/1074988
Commit-Queue: Makoto Shimazu <shimazu@chromium.org>
Reviewed-by: Matt Falkenhagen <falken@chromium.org>
Cr-Commit-Position: refs/heads/master@{#564038}
Former-commit-id: d2da9b67f07e1a336062c38ff8240fec14073ff4